; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_lookup_combo_value.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_lookup_combo_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* (i32*, i32, i32*, i32)* }

@.str = private unnamed_addr constant [36 x i8] c"Combobox entry %s missing opt_get()\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"Combobox entry %s not found\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32)* @lookup_combo_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @lookup_combo_value(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = call %struct.TYPE_3__* @find_combo_map(i32* %9)
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %8, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %12 = icmp ne %struct.TYPE_3__* %11, null
  br i1 %12, label %13, label %33

13:                                               ; preds = %3
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load i32* (i32*, i32, i32*, i32)*, i32* (i32*, i32, i32*, i32)** %15, align 8
  %17 = icmp ne i32* (i32*, i32, i32*, i32)* %16, null
  br i1 %17, label %18, label %29

18:                                               ; preds = %13
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load i32* (i32*, i32, i32*, i32)*, i32* (i32*, i32, i32*, i32)** %20, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %7, align 4
  %28 = call i32* %21(i32* %22, i32 %25, i32* %26, i32 %27)
  store i32* %28, i32** %4, align 8
  br label %37

29:                                               ; preds = %13
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @g_warning(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32* %30)
  br label %32

32:                                               ; preds = %29
  br label %36

33:                                               ; preds = %3
  %34 = load i32*, i32** %5, align 8
  %35 = call i32 @g_warning(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32* %34)
  br label %36

36:                                               ; preds = %33, %32
  store i32* null, i32** %4, align 8
  br label %37

37:                                               ; preds = %36, %18
  %38 = load i32*, i32** %4, align 8
  ret i32* %38
}

declare dso_local %struct.TYPE_3__* @find_combo_map(i32*) #1

declare dso_local i32 @g_warning(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
